[package]
name = "vela"
version = "0.1.0"
edition = "2021"
authors = ["Gaurav Sharma <gs3658362@gmail.com>"]
description = "Vela Network — HotStuff BFT blockchain in Rust"
license = "MIT"

[[bin]]
name = "vela-node"
path = "src/main.rs"

[[bin]]
name = "vela-cli"
path = "src/bin/vela-cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
hex = "0.4"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libp2p = { version = "0.56.0", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "tokio", "macros"] }
futures = "0.3.32"
clap = { version = "4.6.1", features = ["derive"] }
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.13.2", features = ["json"] }
sled = "0.34.7"

[dev-dependencies]
tokio-test = "0.4"
